# dstoolbox08

./: Dockerfile  README.md  app.py  best_iris_model.pkl  environment.yml  main.py  pycaret_adapter.py  pycaretflow.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
models/: tmp.pkl
pycaret_mcp/: __init__.py  adapter.py  cli.py  server.py
scripts/: train_save_pycaret.py
tests/: test_app.py  test_integration_e2e.py  test_pycaret_adapter.py  test_server_load_upload.py
