[project]
name = "pycaret-mcp-server"
version = "0.1.0"
description = "PyCaret MCP-style server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "jupyter",
    "pycaret",
    "pytest",
    "fastapi",
    "uvicorn[standard]"
]
